# cofi-gtk

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  desktop.rs  layout.rs  lcs.rs  main.rs  nav.rs  render.rs
