[package]
name = "cofi"
version = "0.1.0"
edition = "2021"
description = "A minimal, stylish Wayland app launcher for Hyprland"

[[bin]]
name = "cofi"
path = "src/main.rs"

[dependencies]
cairo-rs = "0.21.5"
gtk4 = "0.10.3"

# Config file parsing (TOML)
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
