[package]
name = "cofi"
version = "0.1.0"
edition = "2021"
description = "A minimal, stylish Wayland app launcher for Hyprland"

[[bin]]
name = "cofi"
path = "src/main.rs"

[dependencies]
cairo-rs = "0.21.5"
gtk4 = "0.10.3"

# Config file parsing (TOML)
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"

[package.metadata.deb]
maintainer = "PandeyGanesha <pandeyganesha@gmail.com>"
copyright = "2024"
license-file = []
depends = "$auto, libgtk-4-1"
extended-description = "A universal, blurred transparent app launcher for Linux powered by GTK4."
section = "utils"
priority = "optional"
assets = [
    ["target/release/cofi", "usr/bin/", "755"],
]
